welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: Boolean does not take parameters
    positionFinale=positionFinale()
                                 ^